<resources>
    <string name="app_name" translatable="false">Pass QR Code</string>
    <string name="pass_europe"> (european pass)</string>
    <string name="pass_francais"> (french pass)</string>
    <string name="default_id">Add your certificate \n with the bottom right button</string>
    <string name="qr_code_hint">scan the QR-Code of your Certificate</string>
    <string name="add_pic">add a document</string>
    <string name="long_press_toast">press longer</string>
    <string name="error_code">error QR Code</string>


    <string name="photo" translatable="false">Take Photo</string>
    <string name="gallery" translatable="false">Open Gallery</string>
    <string name="video" translatable="false">Record Video</string>
    <string name="vgallery" translatable="false">Choose Video</string>
    <string name="file" translatable="false">Select File</string>
    <string name="confirm_delete">do you want to delete this page ?</string>
    <string name="delete">delete</string>
    <string name="cancel">cancel</string>
    <string name="add_a_document">add a document</string>
    <string name="delete_the_current_page">Delete the current page</string>
    <string name="open_the_menu">open the menu</string>
    <string name="review_the_app">rate this app</string>
    <string name="turn_cheese_wheel">turn the wheel of cheese</string>
    <string name="add_member">add Member (add qr code)</string>
    <string name="share">share this qr code</string>
</resources>